// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleConsentMode Basic Google Consent Mode Configuration should initialize GoogleConsentMode 1`] = `
Array [
  Arguments [
    "consent",
    "default",
    Object {
      "ad_personalization": "denied",
      "ad_storage": "denied",
      "ad_user_data": "denied",
      "analytics_storage": "denied",
    },
  ],
  Arguments [
    "consent",
    "update",
    Object {
      "ad_personalization": "granted",
      "ad_storage": "granted",
      "ad_user_data": "granted",
      "analytics_storage": "granted",
    },
  ],
]
`;

exports[`GoogleConsentMode Basic Google Consent Mode Configuration should update dataLayer consent when "updateConsent" is called 1`] = `
Array [
  Arguments [
    "consent",
    "default",
    Object {
      "ad_personalization": "denied",
      "ad_storage": "denied",
      "ad_user_data": "denied",
      "analytics_storage": "denied",
    },
  ],
  Arguments [
    "consent",
    "update",
    Object {
      "ad_personalization": "granted",
      "ad_storage": "granted",
      "ad_user_data": "granted",
      "analytics_storage": "granted",
    },
  ],
]
`;

exports[`GoogleConsentMode Basic Google Consent Mode Configuration should update dataLayer consent when "updateConsent" is called 2`] = `
Array [
  Arguments [
    "consent",
    "update",
    Object {
      "ad_personalization": "granted",
      "ad_storage": "granted",
      "ad_user_data": "granted",
      "analytics_storage": "granted",
    },
  ],
]
`;

exports[`GoogleConsentMode Extended Google Consent Mode Configuration sharing cookie with consent when configuration is not provided should load and write consent from the cookie if available 1`] = `
Array [
  Arguments [
    "consent",
    "default",
    Object {
      "ad_personalization": "denied",
      "ad_storage": "denied",
      "ad_user_data": "denied",
      "analytics_storage": "denied",
    },
  ],
  Arguments [
    "consent",
    "update",
    Object {
      "ad_personalization": "granted",
      "ad_storage": "granted",
      "ad_user_data": "granted",
      "analytics_storage": "granted",
    },
  ],
]
`;

exports[`GoogleConsentMode Extended Google Consent Mode Configuration sharing cookie with consent when consent configuration is provided should save a cookie when consent is written to dataLayer 1`] = `"@farfetch/blackout-react__gcm_shared_consent_mode=[[\\"consent\\",\\"default\\",{\\"ad_storage\\":\\"denied\\",\\"ad_user_data\\":\\"denied\\",\\"ad_personalization\\":\\"denied\\",\\"analytics_storage\\":\\"denied\\"}]]"`;

exports[`GoogleConsentMode Extended Google Consent Mode Configuration sharing cookie with consent when consent configuration is provided should save a cookie when consent is written to dataLayer 2`] = `"@farfetch/blackout-react__gcm_shared_consent_mode=[[\\"consent\\",\\"default\\",{\\"ad_storage\\":\\"denied\\",\\"ad_user_data\\":\\"denied\\",\\"ad_personalization\\":\\"denied\\",\\"analytics_storage\\":\\"denied\\"}],[\\"consent\\",\\"update\\",{\\"ad_storage\\":\\"granted\\",\\"ad_user_data\\":\\"granted\\",\\"ad_personalization\\":\\"granted\\",\\"analytics_storage\\":\\"granted\\"}]]"`;

exports[`GoogleConsentMode Extended Google Consent Mode Configuration sharing cookie with consent when partial configuration is provided which does not include consent configuration should write consent to dataLayer when cookie is available 1`] = `
Array [
  Arguments [
    "consent",
    "default",
    Object {
      "ad_personalization": "denied",
      "ad_storage": "denied",
      "ad_user_data": "denied",
      "analytics_storage": "denied",
    },
  ],
  Arguments [
    "consent",
    "update",
    Object {
      "ad_personalization": "granted",
      "ad_storage": "granted",
      "ad_user_data": "granted",
      "analytics_storage": "granted",
    },
  ],
]
`;

exports[`GoogleConsentMode Extended Google Consent Mode Configuration with regions should initialize GoogleConsentMode 1`] = `
Array [
  Arguments [
    "consent",
    "default",
    Object {
      "ad_personalization": "denied",
      "ad_storage": "denied",
      "ad_user_data": "denied",
      "analytics_storage": "denied",
    },
  ],
  Arguments [
    "consent",
    "default",
    Object {
      "ad_personalization": "granted",
      "region": Array [
        "pt",
        "en",
      ],
    },
  ],
  Arguments [
    "consent",
    "update",
    Object {
      "ad_personalization": "granted",
      "ad_storage": "granted",
      "ad_user_data": "granted",
      "analytics_storage": "granted",
    },
  ],
]
`;

exports[`GoogleConsentMode Extended Google Consent Mode Configuration with regions should update dataLayer consent when "updateConsent" is called 1`] = `
Array [
  Arguments [
    "consent",
    "default",
    Object {
      "ad_personalization": "denied",
      "ad_storage": "denied",
      "ad_user_data": "denied",
      "analytics_storage": "denied",
    },
  ],
  Arguments [
    "consent",
    "default",
    Object {
      "ad_personalization": "granted",
      "region": Array [
        "pt",
        "en",
      ],
    },
  ],
  Arguments [
    "consent",
    "update",
    Object {
      "ad_personalization": "granted",
      "ad_storage": "granted",
      "ad_user_data": "granted",
      "analytics_storage": "granted",
    },
  ],
]
`;

exports[`GoogleConsentMode Extended Google Consent Mode Configuration with regions should update dataLayer consent when "updateConsent" is called 2`] = `
Array [
  Arguments [
    "consent",
    "default",
    Object {
      "ad_personalization": "denied",
      "ad_storage": "denied",
      "ad_user_data": "denied",
      "analytics_storage": "denied",
    },
  ],
  Arguments [
    "consent",
    "default",
    Object {
      "ad_personalization": "granted",
      "region": Array [
        "pt",
        "en",
      ],
    },
  ],
  Arguments [
    "consent",
    "update",
    Object {
      "ad_personalization": "granted",
      "ad_storage": "granted",
      "ad_user_data": "granted",
      "analytics_storage": "granted",
    },
  ],
  Arguments [
    "consent",
    "update",
    Object {
      "ad_personalization": "granted",
      "ad_storage": "granted",
      "ad_user_data": "granted",
      "analytics_storage": "granted",
    },
  ],
]
`;

exports[`GoogleConsentMode Extended Google Consent Mode Configuration with regions should update dataLayer consent when "updateConsent" is called with \`wait_for_update\` property 1`] = `
Array [
  Arguments [
    "consent",
    "default",
    Object {
      "ad_personalization": "denied",
      "ad_storage": "denied",
      "ad_user_data": "denied",
      "analytics_storage": "denied",
      "wait_for_update": 400,
    },
  ],
  Arguments [
    "consent",
    "default",
    Object {
      "ad_personalization": "granted",
      "region": Array [
        "pt",
        "en",
      ],
    },
  ],
  Arguments [
    "consent",
    "update",
    Object {
      "ad_personalization": "denied",
      "ad_storage": "denied",
      "ad_user_data": "denied",
      "analytics_storage": "granted",
    },
  ],
]
`;

exports[`GoogleConsentMode Extended Google Consent Mode Configuration with regions should update dataLayer consent when "updateConsent" is called with \`wait_for_update\` property 2`] = `
Array [
  Arguments [
    "consent",
    "default",
    Object {
      "ad_personalization": "denied",
      "ad_storage": "denied",
      "ad_user_data": "denied",
      "analytics_storage": "denied",
      "wait_for_update": 400,
    },
  ],
  Arguments [
    "consent",
    "default",
    Object {
      "ad_personalization": "granted",
      "region": Array [
        "pt",
        "en",
      ],
    },
  ],
  Arguments [
    "consent",
    "update",
    Object {
      "ad_personalization": "denied",
      "ad_storage": "denied",
      "ad_user_data": "denied",
      "analytics_storage": "granted",
    },
  ],
  Arguments [
    "consent",
    "update",
    Object {
      "ad_personalization": "granted",
      "ad_storage": "granted",
      "ad_user_data": "granted",
      "analytics_storage": "granted",
    },
  ],
]
`;

exports[`GoogleConsentMode Extended Google Consent Mode Configuration with unusual scenarios should deal with custom assignments on google consents 1`] = `
Array [
  Arguments [
    "consent",
    "default",
    Object {
      "ad_personalization": "denied",
      "ad_storage": "denied",
      "ad_user_data": "denied",
      "analytics_storage": "denied",
    },
  ],
  Arguments [
    "consent",
    "update",
    Object {
      "ad_personalization": "denied",
      "ad_storage": "granted",
      "ad_user_data": "granted",
      "analytics_storage": "granted",
    },
  ],
  Arguments [
    "consent",
    "update",
    Object {
      "ad_personalization": "denied",
      "ad_storage": "granted",
      "ad_user_data": "granted",
      "analytics_storage": "granted",
    },
  ],
  Arguments [
    "consent",
    "update",
    Object {
      "ad_personalization": "denied",
      "ad_storage": "granted",
      "ad_user_data": "granted",
      "analytics_storage": "granted",
    },
  ],
  Arguments [
    "consent",
    "update",
    Object {
      "ad_personalization": "granted",
      "ad_storage": "granted",
      "ad_user_data": "granted",
      "analytics_storage": "granted",
    },
  ],
]
`;

exports[`GoogleConsentMode Extended Google Consent Mode Configuration with unusual scenarios should deal with no categories or getConsentValue function set 1`] = `
Array [
  Arguments [
    "consent",
    "default",
    Object {
      "ad_personalization": "denied",
      "ad_storage": "denied",
      "ad_user_data": "denied",
      "analytics_storage": "denied",
    },
  ],
  Arguments [
    "consent",
    "update",
    Object {
      "ad_personalization": "denied",
      "ad_storage": "granted",
      "ad_user_data": "granted",
      "analytics_storage": "granted",
    },
  ],
  Arguments [
    "consent",
    "update",
    Object {
      "ad_personalization": "denied",
      "ad_storage": "granted",
      "ad_user_data": "granted",
      "analytics_storage": "granted",
    },
  ],
]
`;
